languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/CheckRLAlgorithmParameter4.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration CheckRLAlgorithmParameter4 {
    learning_method : reinforcement

    rl_algorithm: td3-algorithm

    agent_name : "reinforcement-agent"

    environment : gym { name:"CartPole-v1" }

    context : cpu

    num_episodes : 300
    num_max_steps : 9999
    discount_factor : 0.998
    target_score : 1000
    training_interval : 10

    use_double_dqn: true
}